--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -36,7 +36,7 @@
         </div>
         <div id="nav-menu">
           {% for menu in site.menu %}
-            <a href="{{ site.baseurl }}/{{ menu.directory }}"><i class="{{ menu.icon }}"> {{ menu.page }}</i></a>
+            <a href="{{ site.baseurl }}/{{ menu.directory }}"><i class="{{ menu.icon }}">{{ menu.page }}</i></a>
           {% endfor %}
         </div>
       <script type="text/javascript">
@@ -86,7 +86,7 @@
                 <ul class="category-list">
                   {% for category in site.categories %}
                     <li class="category-list-item">
-                      <a class="category-list-link" href="{{ site.baseurl }}/category/{{ category[0] }}/">{{ category[0] }}</a>
+                      <a class="category-list-link" href="{{ site.baseurl }}/category?key={{ category[0] }}">{{ category[0] }}</a>
                     </li>
                   {% endfor %}
                 </ul>
@@ -96,7 +96,7 @@
                 <div class="widget-title">标签</div>
                 <div class="tagcloud">
                   {% for tag in site.tags %}
-                    <a href="{{ site.baseurl }}/tag/{{ tag[0] }}/" style="font-size: 15px;">{{ tag[0] }}</a>
+                    <a href="{{ site.baseurl }}/tag?key={{ tag[0] }}" style="font-size: 15px;">{{ tag[0] }}</a>
                   {% endfor %}
                 </div>
             </div>
