--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ a:focus {
     .post .post-content h3 {
       margin: 1.4em 0 1.1em; }
     .post .post-content pre code {
-      padding: 0 2em; }
+      padding: 0 0; }
     .post .post-content p {
       margin: 0 0 1.234em; }
       .post .post-content p code {
