--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,6 +20,7 @@
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
   
+  <link rel="stylesheet" type="text/css" href="{{ "/css/highlight.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "/css/pure-min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "/css/grids-responsive-min.css" | prepend: site.baseurl }}">
