--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,6 +25,17 @@
   <link rel="stylesheet" type="text/css" href="{{ "/css/pure-min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "/css/grids-responsive-min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?7d837dd0d1ed2662918f3c3131b0e696";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+
 </head>
 
   <body>
