add jsontool link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -120,13 +120,13 @@
                 </ul>
             </div>
               
-            <!--div class="widget">
+	    <div class="widget">
               <div class="widget-title">友情链接</div>
               {% for link in site.links %}
                 <a href="{{ site.baseurl }}/{{ menu.directory }}"><i class="{{ menu.icon }}"> {{ menu.page }}</i></a>
                 <ul></ul><a href="{{ link.url }}" title="{{ link.title }}" target="_blank">{{ link.title }}</a>
               {% endfor %}
-            </div-->
+            </div>
           </div>
         </div>
       </div>
